--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	//Swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
 
 	//  MapStruct
